--- a/doc/changes/0.10.0.rst
+++ b/doc/changes/0.10.0.rst
@@ -55,7 +55,7 @@ Fixes
 
 - :bdg-success:`API` When using cosine filter and ``sample_masks`` is used, :func:`~signal.clean` generates the cosine discrete regressors using the full time series (:gh:`3385` by `Hao-Ting Wang`_).
 
-- :bdg-primary:`DOC` Description of the ``opening`` parameter added to ``compute_multi_epi_mask`` docs (:gh:`3412` by `Natasha Clarke`_).
+- :bdg-primary:`Doc` Description of the ``opening`` parameter added to ``compute_multi_epi_mask`` docs (:gh:`3412` by `Natasha Clarke`_).
 
 - :bdg-info:`Plotting` Fix display of colorbar in matrix plots. Colorbar was overlapping in :func:`~matplotlib.pyplot.subplots` due to a hardcoded adjustment value in the subplot (:gh:`3403` by `Raphael Meudec`_).
 
@@ -71,13 +71,13 @@ Enhancements
 
 - :func:`~signal.clean` imputes scrubbed volumes (defined through ``sample_masks``) with cubic spline function before applying butterworth filter (:gh:`3385` by `Hao-Ting Wang`_).
 
-- :bdg-primary:`DOC` As part of making the User Guide more user-friendly, the introduction was reworked (:gh:`3380` by `Alexis Thual`_)
+- :bdg-primary:`Doc` As part of making the User Guide more user-friendly, the introduction was reworked (:gh:`3380` by `Alexis Thual`_)
 
-- :bdg-primary:`DOC` Added instructions for maintainers to make sure LaTeX dependencies are installed before building and deploying the stable docs (:gh:`3426` by `Yasmin Mzayek`_).
+- :bdg-primary:`Doc` Added instructions for maintainers to make sure LaTeX dependencies are installed before building and deploying the stable docs (:gh:`3426` by `Yasmin Mzayek`_).
 
 - :bdg-success:`API` Parameter ``sample_masks`` in :func:`~signal.clean` and masker functions accept binary mask (:gh:`3439` by `Hao-Ting Wang`_).
 
-- :bdg-primary:`DOC` Contributing docs were improved by adding clear guidelines for users about changelog/whatsnew entries (:gh:`3446` by `Robert Williamson`_).
+- :bdg-primary:`Doc` Contributing docs were improved by adding clear guidelines for users about changelog/whatsnew entries (:gh:`3446` by `Robert Williamson`_).
 
 - :bdg-success:`API` Add parameter ``cut_coords`` in :func:`~reporting.make_glm_report` (:gh:`3452` by `Audrey Duran`_).
 
@@ -91,7 +91,7 @@ Changes
 
 - :bdg-danger:`Deprecation` Function ``nilearn.masking.compute_multi_gray_matter_mask`` has been removed since it has been deprecated and replaced by :func:`~masking.compute_multi_brain_mask` (:gh:`3427` by `Yasmin Mzayek`_).
 
-- :bdg-primary:`DOC` :mod:`~nilearn.glm` will no longer warn that the module is experimental (:gh:`3424` by `Yasmin Mzayek`_).
+- :bdg-primary:`Doc` :mod:`~nilearn.glm` will no longer warn that the module is experimental (:gh:`3424` by `Yasmin Mzayek`_).
 
 - :bdg-danger:`Deprecation` Python ``3.6`` is no longer supported. Support for Python ``3.7`` is deprecated and will be removed in release ``0.12`` (:gh:`3429` by `Yasmin Mzayek`_).
 
@@ -110,4 +110,4 @@ Changes
 
 - In release ``0.10.0`` the default resolution for loaded MNI152 templates will be 1mm instead of 2mm (:gh:`3433` by `Yasmin Mzayek`_).
 
-- :bdg-primary:`DOC` Remove all docstring mentions of GLM module being experimental and any references to nistats migration. ``doc/nistats_migration.rst`` is also removed (:gh:`3449` by `Yasmin Mzayek`_).
+- :bdg-primary:`Doc` Remove all docstring mentions of GLM module being experimental and any references to nistats migration. ``doc/nistats_migration.rst`` is also removed (:gh:`3449` by `Yasmin Mzayek`_).
