Fix reference format

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -1210,6 +1210,11 @@
 	and Poline, Jean-Baptiste
 	and Thirion, Bertrand},
 	year = {2010},
+	journal = {NeuroImage},
+	volume = {51},
+	number = {1},
+	pages = {288--299},
+	issn = {1095-9572},
     doi={10.1016/j.neuroimage.2010.02.010},
     url={https://pubmed.ncbi.nlm.nih.gov/20153834}
 }
